fix: default path to the config file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,14 @@
             "program": "${workspaceFolder}/garmin_workouts/garminworkouts.py",
             "console": "integratedTerminal",
             "args": ["login"],
-        }
+        },
+        {
+            "name": "Export",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/garmin_workouts/garminworkouts.py",
+            "console": "integratedTerminal",
+            "args": ["export"],
+        },
     ]
 }
