--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,5 +20,21 @@
             "console": "integratedTerminal",
             "args": ["export"],
         },
+        {
+            "name": "Import",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/garmin_workouts/garminworkouts.py",
+            "console": "integratedTerminal",
+            "args": ["import"],
+        },
+        {
+            "name": "Create Sample Workout",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/garmin_workouts/garminworkouts.py",
+            "console": "integratedTerminal",
+            "args": ["create", "--sample-workout"],
+        },
     ]
 }
